<resources>
    <string name="app_name">Dedicace</string>
    <string name="logo_d_dicace">logo dédicace</string>
    <string name="groupe">Groupe</string>
    <string name="titre">Titre</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_db">reset DB</string>
    <string name="effacer_le_dernier_enregistrement">Effacer le dernier enregistrement</string>
    <string name="effacer_toutes_les_enregistrements_live">Effacer toutes les enregistrements Live</string>
    <string name="effacer_tous_les_enregistrements_live">Effacer tous les enregistrements Live</string>
    <string name="pass_hint">Mot de passe...</string>
    <string name="email_hint">Votre Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Se connecter</string>
    <string name="se_déconnecter">Se déconnecter</string>
    <string name="parametres">Paramètres</string>
    <string name="preferences">Préférences</string>

    <string name="tutti_label">Tutti</string>
    <string name="bass_label">Bass</string>
    <string name="tenor_label">Tenor</string>
    <string name="alto_label">Alto</string>
    <string name="soprano_label">Soprano</string>

    <string name="tutti_value" translatable="false">TUTTI</string>
    <string name="bass_value" translatable="false">BASSE</string>
    <string name="tenor_value" translatable="false">TENOR</string>
    <string name="alto_value" translatable="false">ALTO</string>
    <string name="soprano_value" translatable="false">SOPRANO</string>

    <string name="pref_pupitre_label">Pupitres chargés en auto.</string>
    <string name="pref_pupitre_key" translatable="false">pupitreAuto</string>
    <string name="charge_auto_donnees">Chargement auto. pupitres</string>
    <string name="charge_auto_summary">Chargement automatique</string>
    <string name="charge_manuel_summary">Chargement manuel</string>
    <string name="admin">Admin</string>
    <string name="modification_source_song">Modification Source Song</string>
    <string name="backgr">Backgr.</string>
    <string name="oldtitre">Oldtitre</string>
    <string name="oldgroupe">OldGroupe</string>
    <string name="oldduration">OldDuration</string>
    <string name="oldbackgr">Oldbackgr.</string>
    <string name="select_backgr">Select. Backgr.</string>
    <string name="selection">Selection...</string>
    <string name="pupitre">Pupitre</string>
    <string name="source">Source</string>
    <string name="modification_song">Modification Song</string>
    <string name="oldpupitre">OldPupitre</string>
    <string name="oldsource">OldSource</string>
    <string name="oldmp3">OldMp3</string>
    <string name="select_mp3">Select. Mp3</string>
    <string name="supprimer">Supprimer</string>
    <string name="charger_les_chansons_d_un_pupitre">Charger les chansons d\'un pupitre</string>
    <string name="supprimer_les_chansons_d_un_pupitre">Supprimer les chansons d\'un pupitre</string>
    <string name="maj_auto">maj_auto</string>
    <string name="modification_user">Modification User</string>
    <string name="tous">Tous</string>
    <string name="contact">Contact</string>
    <string name="lieu">lieu</string>
    <string name="lieu_du_concert">Lieu du Concert</string>
    <string name="ajout_de_concerts">Ajout de Concerts</string>
    <string name="date_du_concert">Date du concert</string>
    <string name="concerts">Concerts</string>
    <string name="ajouter_dans_spectacle">Ajouter Dans Spectacle</string>
    <string name="ajouter">Ajouter</string>
    <string name="date">date</string>
    <string name="modification_de_spectacle">Modification de Spectacle</string>
    <string name="cr_ation_de_spectacle">Création de Spectacle</string>
    <string name="new_titres">new titres</string>
    <string name="creation_de_saisons">Création de Saisons</string>
    <string name="notification_channel_id">myCanal</string>
    <string name="notification_channel_title">myTitle</string>
    <string name="notification_channel_description">Channel pour les notifications</string>
    <string name="trombinoscope">Trombinoscope</string>
    <string name="btn_gris_clair">Bouton Gris clair - la Bande Son n\'existe pas.</string>
    <string name="btn_gris_fonce">Bouton Gris foncé - la Bande Son existe mais n\'est pas chargée sur le téléphone. Appuyez longuement pour charger.</string>
    <string name="btn_orange_fonce">Bouton Orange foncé - la Bande Son est sur le téléphone et est active. Appuyez sur Play pour l\'écouter</string>
    <string name="btn_orange_clair">Bouton Orange Clair - la Bande Son est sur le téléphone mais non active. Appuyez dessus pour l\'activer et l\'écouter</string>


</resources>
