<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/trombi"
        android:title="@string/trombinoscope"
        app:showAsAction="never" />

    <item
        android:id="@+id/load_pupitre"
        android:title="@string/charger_les_chansons_d_un_pupitre"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_pupitre"
        android:title="@string/supprimer_les_chansons_d_un_pupitre"
        app:showAsAction="never" />

    <item
        android:id="@+id/parametres"
        android:title="@string/preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"/>

    <item
        android:id="@+id/admin"
        android:title="@string/admin"
        app:showAsAction="never" />

    <item
        android:id="@+id/spectacles"
        android:title="@string/tous"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/info_app_main"
        android:title="@string/tous"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>